--- a/calendar-double/src/components/calendar-single/calendar-single.css
+++ b/calendar-double/src/components/calendar-single/calendar-single.css
@@ -1,5 +1,6 @@
 :host {
   display: flex;
+  padding: 0 2px;
 }
 
 .container-calendar {
@@ -9,7 +10,7 @@
 }
 
 .calendar {
-  width: 165px;
+  /* width: 165px; */
   height: 190px;
   padding: 7px 5px;
   font-size: 11px;
@@ -30,15 +31,15 @@
   margin: 0;
   /* color: rgb(179, 179, 179); */
   background-color: transparent;
-  width: 155px;
+  /* width: 155px; */
 }
 
 .days-in-month li {
-  justify-self: center;
+  /* justify-self: center; */
   margin: 3px 0;
-  padding: 1px 0;
-  width: 23px;
-  height: 18px;
+  padding: 3px 0;
+  min-width: 25px;
+  /* height: 18px; */
   text-align: center;
 }
 
@@ -63,8 +64,8 @@
 }
 
 .days-in-month .selected {
-  background-color: #0075c0;
-  color: #fff;
+  background-color: var(--primary-color, #0075c0);
+  color: var(--secondary-color,#fff);
 }
 
 li.selected:nth-child(7n + 1),
@@ -79,7 +80,7 @@ li.selected:nth-child(7n + 7){
 }
 
 .is-now {
-  border: solid 1px #0075c0;
+  border: solid 1px var(--primary-color, #0075c0);
   width: 21px;
 }
 
