--- a/calendar-double/src/components/calendar-single/calendar-single.css
+++ b/calendar-double/src/components/calendar-single/calendar-single.css
@@ -4,13 +4,10 @@
 }
 
 .container-calendar {
-  /* background-color: rgb(255, 255, 255);
-  box-shadow: 0 6px 18px 0 rgba(0,45,114,0.15); */
   padding-top: 5px;  
 }
 
 .calendar {
-  /* width: 165px; */
   height: 190px;
   padding: 7px 5px;
   font-size: 11px;
@@ -31,15 +28,12 @@
   margin: 0;
   color: rgb(179, 179, 179);
   background-color: transparent;
-  /* width: 155px; */
 }
 
 .days-in-month li {
-  /* justify-self: center; */
   margin: 3px 0;
   padding: 3px 0;
   min-width: 25px;
-  /* height: 18px; */
   text-align: center;
 }
 
@@ -82,6 +76,7 @@ li.selected:nth-child(7n + 7){
 .is-now {
   border: solid 1px var(--primary-color, #0075c0);
   width: 21px;
+  border-radius: 50%;
 }
 
 .days-in-month .inside-the-range {
