--- a/calendar-double/src/components/calendar-input-selection/calendar-input-selection.css
+++ b/calendar-double/src/components/calendar-input-selection/calendar-input-selection.css
@@ -4,7 +4,7 @@
   background: rgb(255, 255, 255);
   border: 1px solid rgb(204, 204, 204);
   height: 32px;
-  max-width: 216px;
+  max-width: 225px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -17,7 +17,7 @@
 
 .day-selectet-text {
   color: rgb(50, 50, 50);
-  font-size: 12px;
+  font-size: 0.8rem;
   font-family: var(--fontLight, 'InterStateL', sans-serif);
   font-weight: 300;
   letter-spacing: 0;
