--- a/calendar-double/src/components/calendar-single/calendar-single.css
+++ b/calendar-double/src/components/calendar-single/calendar-single.css
@@ -1,23 +1,23 @@
 :host {
   display: flex;
-  padding: 0 2px;
+  padding: 7% 2%;
+  font-size: 0.9rem;
 }
 
 .container-calendar {
-  padding-top: 5px;  
-}
-
-.calendar {
-  height: 190px;
-  padding: 7px 5px;
-  font-size: 11px;
+  min-width: 170px;
 }
 
 .day-names {
   display: grid;
   grid-template-columns: repeat(7, 1fr);
   justify-items: center;
-  margin-bottom: 5px;
+  margin: 3% 0;
+  font-size: 0.75rem;
+}
+
+.day-names span{
+  padding: 0 3px;
 }
 
 .inactive {
@@ -37,8 +37,8 @@
 .days-in-month li {
   margin: 3px 0;
   padding: 3px 0;
-  min-width: 25px;
   text-align: center;
+  font-size: 0.7rem;
 }
 
 .days-in-month li:nth-child(7n + 1){
@@ -53,12 +53,9 @@
   color: transparent;
   letter-spacing: -0.8px;
   cursor: default;
-  font-size: 10px;
   font-weight: normal;
   margin: 3px 0;
   padding: 1px 0;
-  width: 23px;
-  height: 18px;
 }
 
 .days-in-month .selected {
@@ -92,4 +89,30 @@ li.selected:nth-child(7n + 7){
 li.is-now:nth-child(7n + 1),
 li.is-now:nth-child(7n + 7){
   border-radius: 25px;
+}
+
+@media (min-width: 321px) and (max-width: 520px) {
+  :host{
+    padding: 2% 0;
+  }
+}
+
+@media (min-width: 150px) and (max-width: 320px) {
+  :host{
+    padding: 2% 0;
+    font-size: 0.7rem;
+  }
+
+  .container-calendar {
+    min-width: 125px;
+  }
+
+  .day-names {
+   font-size: 0.65rem;
+  }
+  
+  .days-in-month li {   
+    font-size: 0.65rem;
+  }
+
 }
