--- a/calendar-double/src/components/double-calendar-container/double-calendar-container.css
+++ b/calendar-double/src/components/double-calendar-container/double-calendar-container.css
@@ -1,4 +1,7 @@
-:host {  
+:host {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;  
   font-size: 0.9rem;
   font-family: sans-serif;
 }
@@ -74,7 +77,7 @@
 .period-list img {
   rotate: 270deg;
   height: 17px;
-  width: max-content;
+  width: 20px;
   padding: 5px 0;
   cursor: pointer;
 }
